--- a/MTA Train Presentation.ipynb
+++ b/MTA Train Presentation.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### by Team _____________ : Grace Cuenca, Taylor Wong and Joyce Wu"
+    "### by Team Don't Take the G Train, Take the W\n",
+    "#### Grace Cuenca, Taylor Wong and Joyce Wu"
    ]
   },
   {
@@ -32,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Hypothesis:"
+    "##### Hypothesis: New York City MTA Subway trains always come late."
    ]
   },
   {
