--- a/MTA Train Presentation.ipynb
+++ b/MTA Train Presentation.ipynb
@@ -17,11 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/joycewu/anaconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:280: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  'Matplotlib is building the font cache using fc-list. '\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -45,22 +52,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYoAAAEKCAYAAAAMzhLIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEydJREFUeJzt3X+MZ3dd7/Hnq1t+2NofXnfJ1e4iLW5vXStJYax4UUGp\npq24TbwNt4sNFps2ASooWi8EAqQYlVZDbNJ7YVF+SJFSjbduYGuvqYsoYbFTke0PUrN3UTq0sbtQ\na7XXtmvf94/vWefrdOYzZ4Y93/l29vlIJvM953y+5/ueT2b3NZ/z43NSVUiStJTj1roASdJ0Mygk\nSU0GhSSpyaCQJDUZFJKkJoNCktQ0WFAk+VCSh5LcvcT2JLk+yf4k+5K8eKhaJEmrN+SI4iPA+Y3t\nFwBbu68rgf81YC2SpFUaLCiq6rPANxpNLgJ+r0b2Aqcm+Y6h6pEkrc7xa/jZpwH3jy3PdeseXNgw\nyZWMRh2ceOKJLznrrLMmUqAkrRd33nnnoaratJr3rmVQZJF1i84nUlU7gZ0AMzMzNTs7O2RdkrTu\nJPn71b53La96mgO2jC1vBh5Yo1okSUtYy6DYBby2u/rppcAjVfW0w06SpLU12KGnJJ8AXgFsTDIH\nvAt4FkBVvR/YDVwI7AceA143VC2SpNUbLCiqascy2wt441CfL0k6OrwzW5LUZFBIkpoMCklSk0Eh\nSWoyKCRJTQaFJKnJoJAkNRkUkqQmg0KS1GRQSJKaDApJUpNBIUlqMigkSU0GhSSpyaCQJDUZFJKk\nJoNCktRkUEiSmgwKSVKTQSFJajIoJElNBoUkqcmgkCQ1GRSSpCaDQpLUZFBIkpoMCklSk0EhSWoy\nKCRJTQaFJKnJoJAkNRkUkqQmg0KS1GRQSJKaDApJUtOgQZHk/CT3Jdmf5K2LbH9+kj1JvphkX5IL\nh6xHkrRygwVFkg3ADcAFwDZgR5JtC5q9A7i5qs4BLgH+51D1SJJWZ8gRxbnA/qo6UFVPADcBFy1o\nU8DJ3etTgAcGrEeStApDBsVpwP1jy3PdunHvBi5NMgfsBn5+sR0luTLJbJLZgwcPDlGrJGkJQwZF\nFllXC5Z3AB+pqs3AhcDHkjytpqraWVUzVTWzadOmAUqVJC1lyKCYA7aMLW/m6YeWLgduBqiqzwPP\nBTYOWJMkaYWGDIo7gK1JTk/ybEYnq3ctaPNV4JUASb6HUVB4bEmSpshgQVFVh4GrgNuALzO6uume\nJNck2d41+yXgiiRfAj4BXFZVCw9PSZLW0PFD7ryqdjM6ST2+7p1jr+8FXjZkDZKkb453ZkuSmgwK\nSVKTQSFJajIoJElNBoUkqcmgkCQ1GRSSpCaDQpLUZFBIkpoMCklSk0EhSWoyKCRJTQaFJKnJoJAk\nNRkUkqQmg0KS1GRQSJKaDApJUpNBIUlqMigkSU0GhSSpyaCQJDUZFJKkpmWDIsmZSW5Pcne3/KIk\n7xi+NEnSNOgzovgg8DbgSYCq2gdcMmRRkqTp0ScoTqiqv1qw7vAQxUiSpk+foDiU5IVAASS5GHhw\n0KokSVPj+B5t3gjsBM5K8jXgK8Clg1YlSZoaywZFVR0AzktyInBcVT06fFmSpGnR56qnX0tyalX9\nS1U9muTbkvzqJIqTJK29PucoLqiqfzyyUFUPAxcOV5IkaZr0CYoNSZ5zZCHJtwDPabSXJK0jfU5m\n3wjcnuTDjK58+jngo4NWJUmaGn1OZl+b5C7glUCA91TVbYNXJkmaCn1GFFTVrcCtK915kvOB3wY2\nAL9TVb+xSJtXA+9mNFr5UlW9ZqWfI0kazrJBkeSngfcCz2M0oghQVXXyMu/bANwA/DgwB9yRZFdV\n3TvWZiuj6UFeVlUPJ3neqn8SSdIg+pzMvhbYXlWnVNXJVXXSciHRORfYX1UHquoJ4CbgogVtrgBu\n6K6koqoeWknxkqTh9QmKf6iqL69i36cB948tz3Xrxp0JnJnkc0n2doeqnibJlUlmk8wePHhwFaVI\nklarzzmK2SSfBG4BHj+ysqr+aJn3ZZF1tcjnbwVeAWwG/iLJ2eP3bXSftZPRNCLMzMws3IckaUB9\nguJk4DHgJ8bWFbBcUMwBW8aWNwMPLNJmb1U9CXwlyX2MguOOHnVJkiagz+Wxr1vlvu8AtiY5Hfga\no2dYLLyi6RZgB/CRJBsZHYo6sMrPkyQNYLAn3FXVYeAq4Dbgy8DNVXVPkmuSbO+a3QZ8Pcm9wB7g\n6qr6+mp/GEnS0Zeq9iH/JH8OXA18oKrO6dbdXVVnT6C+p5mZmanZ2dm1+GhJesZKcmdVzazmvT7h\nTpLU5BPuJElNq33C3c8MWpUkaWo0gyLJccBMVfmEO0k6RjUPPVXVU4yuXOLIE+4mUpUkaWr0OUfx\np0l+OcmWJP/pyNfglUmSpkKfcxQ/131/49i6As44+uVIkqZNnzuzT59EIZKk6dTnzuwTkrwjyc5u\neWuSVw1fmiRpGvQ5R/Fh4Angv3bLc8CvDlaRJGmq9AmKF1bVtcCTAFX1/1h8CnFJ0jrUJyieSPIt\nzN+Z/ULGnkshSVrf+lz19C7gT4AtST4OvAy4bMiiJEnTY8mgSPKyqvoc8Fngp4GXMjrk9OaqOjSh\n+iRJa6w1orgeeAnw+ap6MfDpyZQkSZomraB4MsmHgc1Jrl+4sareNFxZkqRp0QqKVwHnAT8G3DmZ\nciRJ06YVFFdX1f9I8vyq+ujEKpIkTZXW5bEXJnkWcMmkipEkTZ/WiOJPgEPAiUn+aWx9gKqqkwet\nTJI0FZYcUVTV1VV1CvDpqjp57OskQ0KSjh3L3pldVRdNohBJ0nRaMiiS/GX3/dEk/7Tw++RKlCSt\npSXPUVTVD3XfT5pcOZKkadOawqP5uNOq+sbRL0eSNG1aVz3dyWjG2ADPBx7uXp8KfBXwyXeSdAxo\nXfV0elWdAdwG/FRVbayqb2d0x/YfTapASdLa6vM8iu+vqt1HFqrqVuDlw5UkSZomfZ5HcSjJO4Ab\nGR2KuhT4+qBVSZKmRp8RxQ5gE/C/u69N3TpJ0jFg2RFFd3XTmydQiyRpCvUZUUiSjmEGhSSpyaCQ\nJDUtGxRJzkxye5K7u+UXdVdBSZKOAX1GFB8E3gY8CVBV++j5MKMk5ye5L8n+JG9ttLs4SSWZ6bNf\nSdLk9AmKE6rqrxasO7zcm5JsAG4ALgC2ATuSbFuk3UnAm4Av9KhFkjRhfYLiUJIXMrrZjiQXAw/2\neN+5wP6qOlBVTwA3AYs92+I9wLXAv/YrWZI0SX2C4o3AB4CzknwN+AXg9T3edxpw/9jyXLfu3yU5\nB9hSVZ9q7SjJlUlmk8wePHiwx0dLko6WPjfcHQDOS3IicFxVPdpz31lsd/++MTkOeB9wWY8adgI7\nAWZmZmqZ5pKko2jZoEhyKvBa4AXA8cno//+qetMyb50DtowtbwYeGFs+CTgb+Ey3z/8M7Eqyvapm\ne9YvSRpYn0kBdwN7gbuAp1aw7zuArUlOB77G6Eqp1xzZWFWPABuPLCf5DPDLhoQkTZc+QfHcqnrL\nSndcVYeTXMXoeRYbgA9V1T1JrgFmq2rXSvcpSZq8PkHxsSRXAJ8CHj+yss+jULvnWOxesO6dS7R9\nRY9aJEkT1icongCuA97O/MnoAs4YqihJ0vToExRvAb67qg4NXYwkafr0uY/iHuCxoQuRJE2nPiOK\nfwP+Jske/uM5iuUuj5UkrQN9guKW7kuSdAzqc2f2RydRiCRpOi0ZFElurqpXJ7mLsak3jqiqFw1a\nmSRpKrRGFG/uvr9qEoVIkqbTklc9VdWRqcTfUFV/P/4FvGEy5UmS1lqfy2N/fJF1FxztQiRJ06l1\njuL1jEYOZyTZN7bpJOBzQxcmSZoOrXMUvw/cCvw6MP6860f7zPMkSVoflgyKbhrwR4AdkytHkjRt\n+pyjkCQdwwwKSVKTQSFJajIoJElNBoUkqcmgkCQ1GRSSpCaDQpLUZFBIkpoMCklSk0EhSWoyKCRJ\nTQaFJKnJoJAkNRkUkqQmg0KS1GRQSJKaDApJUpNBIUlqMigkSU0GhSSpadCgSHJ+kvuS7E/y1kW2\nvyXJvUn2Jbk9yXcNWY8kaeUGC4okG4AbgAuAbcCOJNsWNPsiMFNVLwL+ELh2qHokSasz5IjiXGB/\nVR2oqieAm4CLxhtU1Z6qeqxb3AtsHrAeSdIqDBkUpwH3jy3PdeuWcjlw62IbklyZZDbJ7MGDB49i\niZKk5QwZFFlkXS3aMLkUmAGuW2x7Ve2sqpmqmtm0adNRLFGStJzjB9z3HLBlbHkz8MDCRknOA94O\nvLyqHh+wHknSKgw5orgD2Jrk9CTPBi4Bdo03SHIO8AFge1U9NGAtkqRVGiwoquowcBVwG/Bl4Oaq\nuifJNUm2d82uA74V+IMkf5Nk1xK7kyStkSEPPVFVu4HdC9a9c+z1eUN+viTpm+ed2ZKkJoNCktRk\nUEiSmgwKSVKTQSFJajIoJElNBoUkqcmgkCQ1GRSSpCaDQpLUZFBIkpoMCklSk0EhSWoyKCRJTQaF\nJKnJoJAkNRkUkqQmg0KS1GRQSJKaDApJUpNBIUlqMigkSU0GhSSpyaCQJDUZFJKkJoNCktRkUEiS\nmgwKSVKTQSFJajIoJElNBoUkqcmgkCQ1GRSSpCaDQpLUZFBIkpoGDYok5ye5L8n+JG9dZPtzknyy\n2/6FJC8Ysh5J0soNFhRJNgA3ABcA24AdSbYtaHY58HBVfTfwPuC9Q9UjSVqdIUcU5wL7q+pAVT0B\n3ARctKDNRcBHu9d/CLwySQasSZK0QscPuO/TgPvHlueAH1iqTVUdTvII8O3AofFGSa4EruwWH09y\n9yAVP/NsZEFfHcPsi3n2xTz7Yt5/We0bhwyKxUYGtYo2VNVOYCdAktmqmvnmy3vmsy/m2Rfz7It5\n9sW8JLOrfe+Qh57mgC1jy5uBB5Zqk+R44BTgGwPWJElaoSGD4g5ga5LTkzwbuATYtaDNLuBnu9cX\nA39WVU8bUUiS1s5gh566cw5XAbcBG4APVdU9Sa4BZqtqF/C7wMeS7Gc0krikx653DlXzM5B9Mc++\nmGdfzLMv5q26L+If8JKkFu/MliQ1GRSSpKapDQqn/5jXoy/ekuTeJPuS3J7ku9aizklYri/G2l2c\npJKs20sj+/RFkld3vxv3JPn9Sdc4KT3+jTw/yZ4kX+z+nVy4FnUOLcmHkjy01L1mGbm+66d9SV7c\na8dVNXVfjE5+/1/gDODZwJeAbQvavAF4f/f6EuCTa133GvbFjwIndK9ffyz3RdfuJOCzwF5gZq3r\nXsPfi63AF4Fv65aft9Z1r2Ff7ARe373eBvzdWtc9UF/8CPBi4O4ltl8I3MroHraXAl/os99pHVE4\n/ce8ZfuiqvZU1WPd4l5G96ysR31+LwDeA1wL/Oski5uwPn1xBXBDVT0MUFUPTbjGSenTFwWc3L0+\nhaff07UuVNVnad+LdhHwezWyFzg1yXcst99pDYrFpv84bak2VXUYODL9x3rTpy/GXc7oL4b1aNm+\nSHIOsKWqPjXJwtZAn9+LM4Ezk3wuyd4k50+susnq0xfvBi5NMgfsBn5+MqVNnZX+fwIMO4XHN+Oo\nTf+xDvT+OZNcCswALx+0orXT7IskxzGahfiySRW0hvr8XhzP6PDTKxiNMv8iydlV9Y8D1zZpffpi\nB/CRqvqtJD/I6P6ts6vqqeHLmyqr+n9zWkcUTv8xr09fkOQ84O3A9qp6fEK1TdpyfXEScDbwmSR/\nx+gY7K51ekK777+RP66qJ6vqK8B9jIJjvenTF5cDNwNU1eeB5zKaMPBY0+v/k4WmNSic/mPesn3R\nHW75AKOQWK/HoWGZvqiqR6pqY1W9oKpewOh8zfaqWvVkaFOsz7+RWxhd6ECSjYwORR2YaJWT0acv\nvgq8EiDJ9zAKioMTrXI67AJe21399FLgkap6cLk3TeWhpxpu+o9nnJ59cR3wrcAfdOfzv1pV29es\n6IH07ItjQs++uA34iST3Av8GXF1VX1+7qofRsy9+Cfhgkl9kdKjlsvX4h2WSTzA61LixOx/zLuBZ\nAFX1fkbnZy4E9gOPAa/rtd912FeSpKNoWg89SZKmhEEhSWoyKCRJTQaFJKnJoJAkNRkU0gok+YUk\nJ6x1HdIkeXmstALdHd8zVXVorWuRJsURhbSEJCcm+XSSLyW5O8m7gO8E9iTZ07XZkeSubvt7x977\nz0l+K8lfd88I2dStf9PYs0NuWpufTFoZRxTSEpL8N+D8qrqiWz6F0bMOZqrqUJLvZDRNyEuAh4H/\nA1xfVbckKeDSqvp4kncyehbEVUkeAE6vqseTnLoOJ+jTOuSIQlraXcB5Sd6b5Ier6pEF278f+ExV\nHeymuv84owfHADwFfLJ7fSPwQ93rfcDHu5l+Dw9bvnR0GBTSEqrqbxmNFu4Cfr0bGYxbyYOyjgzd\nfxK4odvvnd3Mx9JUMyikJXSHlh6rqhuB32T0iMlHGU1nDvAF4OVJNibZwOiZB3/ebTuO0azGAK8B\n/rJ7XsaWqtoD/ApwKqPJHKWp5l8z0tK+D7guyVPAk4yeR/6DwK1JHqyqH03yNmAPo9HF7qr64+69\n/wJ8b5I7GT198b8zmtn0xu5cR4D3eY5CzwSezJYGkOSfq8rRgtYFDz1JkpocUUiSmhxRSJKaDApJ\nUpNBIUlqMigkSU0GhSSp6f8DXSGnThImca8AAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x11861b7b8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#graphs\n",
+    "time_list = []\n",
+    "def csv_to_list(file):\n",
+    "    with open(file, 'r') as csvfile:\n",
+    "        csv_reader = csv.reader(csvfile, delimiter=',')\n",
+    "        for row in csv_reader:\n",
+    "            stop_time = []\n",
+    "            stop_time.append(row[0])\n",
+    "            stop_time.append(row[1])\n",
+    "            \n",
+    "            time_list.append(stop_time)\n",
+    "            \n",
+    "csv_to_list('time_dif.csv')\n",
+    "print time_list\n",
+    "                \n",
+    "def build_graph(list):\n",
+    "    x = []\n",
+    "    y = []\n",
+    "    for item in list:\n",
+    "        x.append(item[0][0:3])\n",
+    "        y.append(item[1])\n",
+    "    #print(x)\n",
+    "    #print(y)\n",
+    "    \n",
+    "    plt.xlabel('Stop_ID')\n",
+    "    plt.ylabel('Time (AST)')\n",
+    "    plt.scatter(x,y)\n",
+    "\n",
+    "    plt.show()\n",
+    "                \n",
     "fig = plt.figure()\n",
     "#plt.plot(will contain time difference data)\n",
     "plt.xlabel('stops')\n",
@@ -100,21 +124,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
