--- a/MTA Train Presentation.ipynb
+++ b/MTA Train Presentation.ipynb
@@ -17,18 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/joycewu/anaconda2/lib/python2.7/site-packages/matplotlib/font_manager.py:280: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  'Matplotlib is building the font cache using fc-list. '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,9 +43,423 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['stop_id', ' time_difference']\n",
+      "['142', ' 6.64454546338']\n",
+      "['142', ' 0.366816718215']\n",
+      "['142', ' 1.18038400767']\n",
+      "['142', ' 4.19067790589']\n",
+      "['142', ' 4.00100536547']\n",
+      "['142', ' 0.420490688075']\n",
+      "['142', ' 0.591509892446']\n",
+      "['142', ' 6.14260185054']\n",
+      "['142', ' 5.62019989457']\n",
+      "['142', ' 0.958352252782']\n",
+      "['142', ' 6.11592983666']\n",
+      "['142', ' 2.94381817723']\n",
+      "['142', ' 0.996096701862']\n",
+      "['142', ' 5.40241630642']\n",
+      "['142', ' 0.237577349248']\n",
+      "['142', ' 0.794439083733']\n",
+      "['142', ' 4.87539707958']\n",
+      "['142', ' 6.68389564219']\n",
+      "['142', ' 1.68472509564']\n",
+      "['142', ' 1.22783593058']\n",
+      "['142', ' 6.52447557588']\n",
+      "['142', ' 5.1998264517']\n",
+      "['142', ' 3.56459244178']\n",
+      "['142', ' 7.76265486723']\n",
+      "['142', ' 0.962602633323']\n",
+      "['142', ' 2.33263382604']\n",
+      "['142', ' 2.4928969909']\n",
+      "['142', ' 1.66464805033']\n",
+      "['142', ' 3.21461587283']\n",
+      "['142', ' 1.22284732993']\n",
+      "['142', ' 6.65634929821']\n",
+      "['142', ' 1.69049997181']\n",
+      "['142', ' 4.95602232166']\n",
+      "['142', ' 2.85540199047']\n",
+      "['142', ' 6.47139393507']\n",
+      "['142', ' 1.73589902704']\n",
+      "['142', ' 4.00004949724']\n",
+      "['142', ' 7.95466687291']\n",
+      "['142', ' 0.435829021496']\n",
+      "['142', ' 4.96821321343']\n",
+      "['137', ' 0.15312418389']\n",
+      "['137', ' 6.96491875121']\n",
+      "['137', ' 4.24421159746']\n",
+      "['137', ' 2.9378842259']\n",
+      "['137', ' 7.05386809079']\n",
+      "['137', ' 3.20060892963']\n",
+      "['137', ' 7.59392757564']\n",
+      "['137', ' 6.3728306474']\n",
+      "['137', ' 1.46829928292']\n",
+      "['137', ' 0.203055612417']\n",
+      "['137', ' 6.06205145688']\n",
+      "['137', ' 1.19101945554']\n",
+      "['137', ' 1.64536565104']\n",
+      "['137', ' 6.22285841044']\n",
+      "['137', ' 6.61633765746']\n",
+      "['137', ' 6.48065635401']\n",
+      "['137', ' 4.78700058928']\n",
+      "['137', ' 4.90780410318']\n",
+      "['137', ' 7.83232241607']\n",
+      "['137', ' 5.2446126913']\n",
+      "['137', ' 4.15521236253']\n",
+      "['137', ' 1.56491389481']\n",
+      "['137', ' 1.21529000609']\n",
+      "['137', ' 3.01124556463']\n",
+      "['137', ' 0.557429146849']\n",
+      "['137', ' 6.03918089014']\n",
+      "['137', ' 5.57290286736']\n",
+      "['137', ' 3.36681309879']\n",
+      "['137', ' 2.81656236361']\n",
+      "['137', ' 1.3472044144']\n",
+      "['137', ' 1.46446822194']\n",
+      "['137', ' 0.903154498415']\n",
+      "['127', ' 5.16699078458']\n",
+      "['127', ' 7.62667883845']\n",
+      "['127', ' 0.323510124518']\n",
+      "['127', ' 6.05477134515']\n",
+      "['127', ' 6.98312860484']\n",
+      "['127', ' 2.7119493572']\n",
+      "['127', ' 4.49480285868']\n",
+      "['127', ' 7.31469064115']\n",
+      "['127', ' 0.785148738271']\n",
+      "['127', ' 5.32133321363']\n",
+      "['127', ' 7.24383649895']\n",
+      "['127', ' 5.34889767256']\n",
+      "['127', ' 0.247787669284']\n",
+      "['127', ' 1.77381616266']\n",
+      "['127', ' 7.84129755586']\n",
+      "['127', ' 2.71298913081']\n",
+      "['127', ' 3.1931566799']\n",
+      "['127', ' 3.53675966302']\n",
+      "['127', ' 4.21289962995']\n",
+      "['127', ' 7.53821686408']\n",
+      "['127', ' 1.3552541701']\n",
+      "['127', ' 0.426815887756']\n",
+      "['127', ' 5.99242273712']\n",
+      "['127', ' 6.90678068941']\n",
+      "['127', ' 0.843749659512']\n",
+      "['127', ' 4.5256114154']\n",
+      "['127', ' 6.55559710888']\n",
+      "['127', ' 5.01769657921']\n",
+      "['127', ' 6.02883943389']\n",
+      "['127', ' 5.28040991648']\n",
+      "['127', ' 5.97456471425']\n",
+      "['127', ' 3.25412771342']\n",
+      "['127', ' 0.701919015133']\n",
+      "['127', ' 6.62705545994']\n",
+      "['127', ' 1.99938700066']\n",
+      "['127', ' 4.51977399391']\n",
+      "['127', ' 6.52012355626']\n",
+      "['127', ' 6.59069992864']\n",
+      "['127', ' 4.68215427117']\n",
+      "['127', ' 5.38848093579']\n",
+      "['125', ' 6.7181132365']\n",
+      "['125', ' 2.18182724714']\n",
+      "['125', ' 4.62158712196']\n",
+      "['125', ' 7.09680235042']\n",
+      "['125', ' 7.38999734343']\n",
+      "['125', ' 3.7459636675']\n",
+      "['125', ' 6.51108720036']\n",
+      "['125', ' 3.28519383767']\n",
+      "['125', ' 0.495651592429']\n",
+      "['125', ' 1.38134736042']\n",
+      "['125', ' 5.74091740856']\n",
+      "['125', ' 0.736888628025']\n",
+      "['125', ' 5.73142142303']\n",
+      "['125', ' 2.19155194101']\n",
+      "['125', ' 6.32270137004']\n",
+      "['125', ' 2.88085431213']\n",
+      "['125', ' 1.24381710988']\n",
+      "['125', ' 1.00609876932']\n",
+      "['125', ' 5.92451910137']\n",
+      "['125', ' 1.50492796846']\n",
+      "['125', ' 4.87947839757']\n",
+      "['125', ' 7.38752463336']\n",
+      "['125', ' 2.88669130778']\n",
+      "['125', ' 0.391358503675']\n",
+      "['125', ' 3.02081424699']\n",
+      "['125', ' 7.32814367917']\n",
+      "['125', ' 4.37282327452']\n",
+      "['125', ' 0.109969641736']\n",
+      "['125', ' 7.6176361658']\n",
+      "['125', ' 7.09672001676']\n",
+      "['125', ' 3.36498956359']\n",
+      "['125', ' 3.14925347088']\n",
+      "['125', ' 4.97421526955']\n",
+      "['125', ' 3.02649563034']\n",
+      "['125', ' 2.44798242818']\n",
+      "['125', ' 0.261809843521']\n",
+      "['125', ' 1.91093823282']\n",
+      "['125', ' 2.49993660403']\n",
+      "['125', ' 6.3428260825']\n",
+      "['125', ' 2.06763201778']\n",
+      "['120', ' 4.46894004634']\n",
+      "['120', ' 6.54307414628']\n",
+      "['120', ' 0.964665014643']\n",
+      "['120', ' 3.25543432813']\n",
+      "['120', ' 4.16877750549']\n",
+      "['120', ' 7.12787723604']\n",
+      "['120', ' 7.24649880405']\n",
+      "['120', ' 6.58205624733']\n",
+      "['120', ' 3.01199582082']\n",
+      "['120', ' 5.25831355263']\n",
+      "['120', ' 5.33624102158']\n",
+      "['120', ' 6.97812296541']\n",
+      "['120', ' 1.17196452375']\n",
+      "['120', ' 6.08930759505']\n",
+      "['120', ' 0.891936264634']\n",
+      "['120', ' 5.32924776135']\n",
+      "['120', ' 5.62255213188']\n",
+      "['120', ' 6.66413987313']\n",
+      "['120', ' 4.82030832845']\n",
+      "['120', ' 4.97849180615']\n",
+      "['120', ' 1.66733320166']\n",
+      "['120', ' 5.32963423097']\n",
+      "['120', ' 2.11142479528']\n",
+      "['120', ' 1.660115512']\n",
+      "['120', ' 6.39263406507']\n",
+      "['120', ' 5.85415373042']\n",
+      "['120', ' 1.58481387265']\n",
+      "['120', ' 3.17563976107']\n",
+      "['120', ' 4.07327126157']\n",
+      "['120', ' 4.26140061675']\n",
+      "['120', ' 5.81770887083']\n",
+      "['120', ' 0.39728690594']\n",
+      "['120', ' 0.657573841121']\n",
+      "['120', ' 7.66631502504']\n",
+      "['120', ' 7.97086661048']\n",
+      "['120', ' 6.44202142894']\n",
+      "['120', ' 4.29706628077']\n",
+      "['120', ' 2.13633062121']\n",
+      "['120', ' 6.19000625419']\n",
+      "['120', ' 4.64828564442']\n",
+      "['115', ' 3.85428372331']\n",
+      "['115', ' 1.03075705611']\n",
+      "['115', ' 4.62598473466']\n",
+      "['115', ' 4.42726473354']\n",
+      "['115', ' 3.63310731782']\n",
+      "['115', ' 6.04299142691']\n",
+      "['115', ' 3.20401704528']\n",
+      "['115', ' 5.43568576871']\n",
+      "['115', ' 3.04350907591']\n",
+      "['115', ' 5.74120674487']\n",
+      "['115', ' 4.0334327315']\n",
+      "['115', ' 4.91283978046']\n",
+      "['115', ' 2.63790948169']\n",
+      "['115', ' 6.73459377205']\n",
+      "['115', ' 0.537923229944']\n",
+      "['115', ' 2.07889553401']\n",
+      "['115', ' 0.182460757897']\n",
+      "['115', ' 0.492357385629']\n",
+      "['115', ' 3.15765198393']\n",
+      "['115', ' 4.81227703889']\n",
+      "['115', ' 2.00315069858']\n",
+      "['115', ' 2.57818980878']\n",
+      "['115', ' 0.0853328862615']\n",
+      "['115', ' 5.31604292734']\n",
+      "['115', ' 6.31048760164']\n",
+      "['115', ' 7.79908061']\n",
+      "['115', ' 2.90421169887']\n",
+      "['115', ' 6.80690959129']\n",
+      "['115', ' 2.71046752414']\n",
+      "['115', ' 1.65681789597']\n",
+      "['115', ' 6.54093822858']\n",
+      "['115', ' 5.64441570361']\n",
+      "['115', ' 6.23108740906']\n",
+      "['115', ' 3.4981861933']\n",
+      "['115', ' 5.57266691756']\n",
+      "['115', ' 6.81149955586']\n",
+      "['115', ' 4.64424924983']\n",
+      "['115', ' 6.47401815063']\n",
+      "['115', ' 4.29675298585']\n",
+      "['115', ' 5.90186636742']\n",
+      "['112', ' 6.07393665404']\n",
+      "['112', ' 2.47309326671']\n",
+      "['112', ' 1.82469830338']\n",
+      "['112', ' 4.10026788624']\n",
+      "['112', ' 2.53003200689']\n",
+      "['112', ' 3.12527247829']\n",
+      "['112', ' 1.21885895491']\n",
+      "['112', ' 4.37128741005']\n",
+      "['112', ' 6.38418067552']\n",
+      "['112', ' 0.785588367657']\n",
+      "['112', ' 6.07624682134']\n",
+      "['112', ' 4.85440449695']\n",
+      "['112', ' 2.99504558701']\n",
+      "['112', ' 4.37540571209']\n",
+      "['112', ' 4.34493048784']\n",
+      "['112', ' 0.853385915538']\n",
+      "['112', ' 7.00169167878']\n",
+      "['112', ' 5.29087818864']\n",
+      "['112', ' 7.1873048557']\n",
+      "['112', ' 7.09058652992']\n",
+      "['112', ' 7.66226372701']\n",
+      "['112', ' 4.26873017912']\n",
+      "['112', ' 6.73339421701']\n",
+      "['112', ' 0.437582527438']\n",
+      "['112', ' 6.64427631193']\n",
+      "['112', ' 5.67398563915']\n",
+      "['112', ' 3.13065120094']\n",
+      "['112', ' 5.35381419579']\n",
+      "['112', ' 6.18201905463']\n",
+      "['112', ' 2.5143020347']\n",
+      "['112', ' 1.11257886466']\n",
+      "['112', ' 1.10772737783']\n",
+      "['112', ' 0.774611088716']\n",
+      "['112', ' 6.47147133029']\n",
+      "['112', ' 5.88540120815']\n",
+      "['112', ' 0.634573206721']\n",
+      "['112', ' 4.70646630654']\n",
+      "['112', ' 7.26394459247']\n",
+      "['112', ' 2.27147170752']\n",
+      "['112', ' 0.916261268935']\n",
+      "['104', ' 1.89050331713']\n",
+      "['104', ' 2.73573080982']\n",
+      "['104', ' 1.9593953853']\n",
+      "['104', ' 7.41380722722']\n",
+      "['104', ' 7.89482398289']\n",
+      "['104', ' 7.27903303614']\n",
+      "['104', ' 2.73641545136']\n",
+      "['104', ' 0.683498093476']\n",
+      "['104', ' 7.40050967161']\n",
+      "['104', ' 0.965155948023']\n",
+      "['104', ' 1.91786926306']\n",
+      "['104', ' 5.72417100304']\n",
+      "['104', ' 3.23796238612']\n",
+      "['104', ' 5.52020394485']\n",
+      "['104', ' 3.53119330706']\n",
+      "['104', ' 4.07215601761']\n",
+      "['104', ' 3.85404779353']\n",
+      "['104', ' 6.00042531337']\n",
+      "['104', ' 1.7126531485']\n",
+      "['104', ' 2.4311331152']\n",
+      "['104', ' 0.0633234626581']\n",
+      "['104', ' 1.83711405153']\n",
+      "['104', ' 2.17231883985']\n",
+      "['104', ' 1.4548611956']\n",
+      "['104', ' 1.1392093581']\n",
+      "['104', ' 6.39144604817']\n",
+      "['104', ' 1.35183837161']\n",
+      "['104', ' 3.41461694234']\n",
+      "['104', ' 1.76685723084']\n",
+      "['104', ' 3.97296414948']\n",
+      "['104', ' 0.526230890635']\n",
+      "['104', ' 4.18588434551']\n",
+      "['104', ' 2.72247822969']\n",
+      "['104', ' 0.715700341116']\n",
+      "['104', ' 2.8068245681']\n",
+      "['104', ' 4.15464730479']\n",
+      "['104', ' 3.94715766797']\n",
+      "['104', ' 3.65013645996']\n",
+      "['104', ' 6.83820501204']\n",
+      "['104', ' 3.75877717846']\n",
+      "['103', ' 4.79329208293']\n",
+      "['103', ' 1.37253848834']\n",
+      "['103', ' 0.36251858559']\n",
+      "['103', ' 6.69589924016']\n",
+      "['103', ' 6.01568093163']\n",
+      "['103', ' 5.45172377621']\n",
+      "['103', ' 6.45742460774']\n",
+      "['103', ' 5.25918709526']\n",
+      "['103', ' 5.99472574322']\n",
+      "['103', ' 1.37017748302']\n",
+      "['103', ' 6.67024585772']\n",
+      "['103', ' 7.28258294868']\n",
+      "['103', ' 0.532952744815']\n",
+      "['103', ' 6.30928983426']\n",
+      "['103', ' 7.02340712498']\n",
+      "['103', ' 1.69109253974']\n",
+      "['103', ' 5.77033516704']\n",
+      "['103', ' 6.11343449965']\n",
+      "['103', ' 5.44219241258']\n",
+      "['103', ' 4.39380230367']\n",
+      "['103', ' 7.59623729543']\n",
+      "['103', ' 6.01384222195']\n",
+      "['103', ' 2.09524193214']\n",
+      "['103', ' 3.14147056853']\n",
+      "['103', ' 0.205786721495']\n",
+      "['103', ' 6.54086671']\n",
+      "['103', ' 5.09112806586']\n",
+      "['103', ' 7.11949587305']\n",
+      "['103', ' 6.35949292831']\n",
+      "['103', ' 5.21510946743']\n",
+      "['103', ' 6.76439838761']\n",
+      "['103', ' 5.66397834174']\n",
+      "['103', ' 5.90137234747']\n",
+      "['103', ' 5.3989441753']\n",
+      "['103', ' 6.97030928022']\n",
+      "['103', ' 1.54981799269']\n",
+      "['103', ' 7.47752866954']\n",
+      "['103', ' 3.8262691509']\n",
+      "['103', ' 6.24393275511']\n",
+      "['103', ' 6.15099271981']\n",
+      "['101', ' 4.00980661006']\n",
+      "['101', ' 7.6688892794']\n",
+      "['101', ' 4.75229156053']\n",
+      "['101', ' 5.97613036775']\n",
+      "['101', ' 5.60167286214']\n",
+      "['101', ' 7.59657391788']\n",
+      "['101', ' 1.62074534776']\n",
+      "['101', ' 0.492201270956']\n",
+      "['101', ' 4.36808853653']\n",
+      "['101', ' 0.961842615661']\n",
+      "['101', ' 3.28785953073']\n",
+      "['101', ' 6.45032280586']\n",
+      "['101', ' 2.01837945245']\n",
+      "['101', ' 2.95017891765']\n",
+      "['101', ' 1.58684727331']\n",
+      "['101', ' 1.29159235839']\n",
+      "['101', ' 0.0419479857436']\n",
+      "['101', ' 3.4340768512']\n",
+      "['101', ' 6.72826624042']\n",
+      "['101', ' 2.93547398616']\n",
+      "['101', ' 1.07047760827']\n",
+      "['101', ' 0.226950704302']\n",
+      "['101', ' 5.46121136179']\n",
+      "['101', ' 4.18180420946']\n",
+      "['101', ' 7.58807350962']\n",
+      "['101', ' 3.63206516003']\n",
+      "['101', ' 7.06953943802']\n",
+      "['101', ' 6.6473011055']\n",
+      "['101', ' 7.37568397105']\n",
+      "['101', ' 6.4935980215']\n",
+      "['101', ' 3.7697935234']\n",
+      "['101', ' 4.43191882288']\n",
+      "['101', ' 0.517983069611']\n",
+      "['101', ' .89437692721']\n",
+      "['101', ' 2.00218109603']\n",
+      "['101', ' 0.360027471381']\n",
+      "['101', ' 2.40159984153']\n",
+      "['101', ' 3.95856603447']\n",
+      "['101', ' 7.38177218929']\n",
+      "['101', ' 6.86775919233']\n",
+      "[]\n",
+      "['stops = { #corresponding column to stop']\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-b1cd91201e4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mtime_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstop_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mcsv_to_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time_dif.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtime_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-9-b1cd91201e4a>\u001b[0m in \u001b[0;36mcsv_to_list\u001b[0;34m(file)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0mstop_time\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m                 \u001b[0mstop_time\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                 \u001b[0mtime_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstop_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "time_list = []\n",
     "def csv_to_list(file):\n",
@@ -62,13 +467,17 @@
     "        csv_reader = csv.reader(csvfile, delimiter=',')\n",
     "        for row in csv_reader:\n",
     "            stop_time = []\n",
-    "            stop_time.append(row[0])\n",
-    "            stop_time.append(row[1])\n",
+    "            print (row)\n",
+    "            if(len(row) == 0):\n",
+    "                pass\n",
+    "            else:\n",
+    "                stop_time.append(row[0])\n",
+    "                stop_time.append(row[1])\n",
     "            \n",
-    "            time_list.append(stop_time)\n",
+    "                time_list.append(stop_time)\n",
     "            \n",
     "csv_to_list('time_dif.csv')\n",
-    "print time_list\n",
+    "print (time_list)\n",
     "                \n",
     "def build_graph(list):\n",
     "    x = []\n",
@@ -124,21 +533,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
